--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <div class="global">
             <div class="cardapio-opcoes">
-                <div class="carousel">
+                <div class="carousel x-salada">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
                     <div class="cartao x-salada">
@@ -25,9 +25,8 @@
                             </div>
                             <span class="tipo">lanches</span>
                             <div class="cartao-imagem">
-                                <img src="assets/img/lanches/x-salada.png" alt="">
+                                <img src="assets/img/lanches/x-salada.png" alt="X-Salada">
                             </div>
-
                         </div>
                     </div>
 
@@ -39,40 +38,125 @@
                             </div>
                             <span class="tipo">lanches</span>
                             <div class="cartao-imagem">
-                                <img src="assets/img/lanches/x-salada com batata.png" alt="">
+                                <img src="assets/img/lanches/x-salada com batata.png" alt="X-Salada com batata frita">
                             </div>
-
                         </div>
                     </div>
                 </div>
 
-                <div class="cartao x-bacon">
-                    <div class="cartao-topo">
-                        <h2 class="name">X-Bacon</h2>
-                        <span>#002</span>
+                <div class="carousel x-bacon">
+                    <button class="arrow-left control" aria-label="Previous image">◀</button>
+                    <button class="arrow-right control" aria-label="Next image">▶</button>
+                    <div class="cartao x-bacon">
+                        <div class="cartao-topo">
+                            <div class="detalhes">
+                                <h2 class="name">X-Bacon</h2>
+                                <span>#003</span>
+                            </div>
+                            <span class="tipo">lanches</span>
+                            <div class="cartao-imagem">
+                                <img src="assets/img/lanches/x-bacon.png" alt="X-Bacon">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="cartao x-bacon com fritas">
+                        <div class="cartao-topo">
+                            <div class="detalhes">
+                                <h2 class="name">X-Bacon com Batata Frita</h2>
+                                <span>#004</span>
+                            </div>
+                            <span class="tipo">lanches</span>
+                            <div class="cartao-imagem">
+                                <img src="assets/img/lanches/x-bacon com batata.png" alt="X-Bacon com batata frita">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+
+                <div class="carousel x-frango">
+                    <button class="arrow-left control" aria-label="Previous image">◀</button>
+                    <button class="arrow-right control" aria-label="Next image">▶</button>
+                    <div class="cartao x-frango">
+                        <div class="cartao-topo">
+                            <div class="detalhes">
+                                <h2 class="name">X-Frango</h2>
+                                <span>#005</span>
+                            </div>
+                            <span class="tipo">lanches</span>
+                            <div class="cartao-imagem">
+                                <img src="assets/img/lanches/x-frango.png" alt="X-Frango">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="cartao x-frango com fritas">
+                        <div class="cartao-topo">
+                            <div class="detalhes">
+                                <h2 class="name">X-Frango com Batata Frita</h2>
+                                <span>#006</span>
+                            </div>
+                            <span class="tipo">lanches</span>
+                            <div class="cartao-imagem">
+                                <img src="assets/img/lanches/x-frango com batata.png" alt="X-Frango com batata frita">
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-                <div class="cartao x-frango">
-                    <div class="cartao-topo">
-                        <h2 class="name">X-Frango</h2>
-                        <span>#003</span>
-                    </div>
-                </div>
 
-                <div class="cartao x-tudo">
-                    <div class="cartao-topo">
-                        <h2 class="name">X-Tudo</h2>
-                        <span>#004</span>
+                <div class="carousel x-tudo">
+                    <button class="arrow-left control" aria-label="Previous image">◀</button>
+                    <button class="arrow-right control" aria-label="Next image">▶</button>
+                    <div class="cartao x-tudo">
+                        <div class="cartao-topo">
+                            <div class="detalhes">
+                                <h2 class="name">X-Tudo</h2>
+                                <span>#007</span>
+                            </div>
+                            <span class="tipo">lanches</span>
+                            <div class="cartao-imagem">
+                                <img src="assets/img/lanches/x-tudo.png" alt="x-tudo">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="cartao x-tudo com fritas">
+                        <div class="cartao-topo">
+                            <div class="detalhes">
+                                <h2 class="name">X-Tudo com Batata Frita</h2>
+                                <span>#008</span>
+                            </div>
+                            <span class="tipo">lanches</span>
+                            <div class="cartao-imagem">
+                                <img src="assets/img/lanches/x-tudo com batata.png" alt="x-tudo com batata frita">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
     
             <nav class="opcoes">
                 <ul>
-                    <li class="x-salada" id="salada">
-                        <img src="" alt="x-salada">
+                    <li class="botao x-salada" id="id botao salada">
+                        <img src="assets/img/lanches/x-salada.png" alt="x-salada">
                         <span>X-Salada</span>
+                    </li>
+
+                    <li class="botao x-bacon" id="id botao bacon">
+                        <img src="assets/img/lanches/x-bacon.png" alt="x-bacon">
+                        <span>X-Bacon</span>
+                    </li>
+
+                    <li class="botao x-frango" id="id botao frango">
+                        <img src="assets/img/lanches/x-frango.png" alt="x-frango">
+                        <span>X-Frango</span>
+                    </li>
+
+                    <li class="botao x-tudo" id="id botao tudo">
+                        <img src="assets/img/lanches/x-tudo.png" alt="x-tudo">
+                        <span>X-Tudo</span>
                     </li>
                 </ul>
             </nav>
