--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/opcoes.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+
+    <script src="js/index.js" defer></script>
 
     <title>Cardápio</title>
 </head>
