--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <main>
         <div class="global">
             <div class="cardapio-opcoes">
-                <div class="carousel x-salada">
+                <div class="carousel carousel-x-salada">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao x-salada">
+                    <div class="cartao x-salada aberto cor-salada">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Salada</h2>
@@ -33,7 +33,7 @@
                         </div>
                     </div>
 
-                    <div class="cartao x-salada com fritas">
+                    <div class="cartao x-salada com fritas cor-salada">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Salada com Batata Frita</h2>
@@ -47,10 +47,10 @@
                     </div>
                 </div>
 
-                <div class="carousel x-bacon">
+                <div class="carousel carousel-x-bacon">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao x-bacon">
+                    <div class="cartao x-bacon cor-bacon">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Bacon</h2>
@@ -63,7 +63,7 @@
                         </div>
                     </div>
 
-                    <div class="cartao x-bacon com fritas">
+                    <div class="cartao x-bacon com fritas cor-bacon">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Bacon com Batata Frita</h2>
@@ -78,10 +78,10 @@
                 </div>
                 
 
-                <div class="carousel x-frango">
+                <div class="carousel carousel-x-frango">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao x-frango">
+                    <div class="cartao x-frango cor-frango">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Frango</h2>
@@ -95,7 +95,7 @@
                     </div>
 
                     <div class="cartao x-frango com fritas">
-                        <div class="cartao-topo">
+                        <div class="cartao-topo cor-frango">
                             <div class="detalhes">
                                 <h2 class="name">X-Frango com Batata Frita</h2>
                                 <span>#006</span>
@@ -109,10 +109,10 @@
                 </div>
 
 
-                <div class="carousel x-tudo">
+                <div class="carousel carousel-x-tudo">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao x-tudo">
+                    <div class="cartao x-tudo cor-tudo">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Tudo</h2>
@@ -125,7 +125,7 @@
                         </div>
                     </div>
 
-                    <div class="cartao x-tudo com fritas">
+                    <div class="cartao x-tudo com fritas cor-tudo">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Tudo com Batata Frita</h2>
