Fixing button size, border, color and other specialties

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="carousel carousel-x-salada">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao x-salada aberto cor-salada">
+                    <div class="cartao-lancheda aberto cor-salada">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Salada</h2>
@@ -33,7 +33,7 @@
                         </div>
                     </div>
 
-                    <div class="cartao x-salada com fritas cor-salada">
+                    <div class="cartao-lancheda com fritas cor-salada">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Salada com Batata Frita</h2>
@@ -50,7 +50,7 @@
                 <div class="carousel carousel-x-bacon">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao x-bacon cor-bacon">
+                    <div class="cartao-lanchen cor-bacon">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Bacon</h2>
@@ -63,7 +63,7 @@
                         </div>
                     </div>
 
-                    <div class="cartao x-bacon com fritas cor-bacon">
+                    <div class="cartao-lanchen com fritas cor-bacon">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Bacon com Batata Frita</h2>
@@ -81,7 +81,7 @@
                 <div class="carousel carousel-x-frango">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao x-frango cor-frango">
+                    <div class="cartao-lanchego cor-frango">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Frango</h2>
@@ -94,7 +94,7 @@
                         </div>
                     </div>
 
-                    <div class="cartao x-frango com fritas">
+                    <div class="cartao-lanche com fritas">
                         <div class="cartao-topo cor-frango">
                             <div class="detalhes">
                                 <h2 class="name">X-Frango com Batata Frita</h2>
@@ -112,7 +112,7 @@
                 <div class="carousel carousel-x-tudo">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao x-tudo cor-tudo">
+                    <div class="cartao-lanche cor-tudo">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Tudo</h2>
@@ -125,7 +125,7 @@
                         </div>
                     </div>
 
-                    <div class="cartao x-tudo com fritas cor-tudo">
+                    <div class="cartao-lanche com fritas cor-tudo">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Tudo com Batata Frita</h2>
@@ -142,22 +142,22 @@
     
             <nav class="opcoes">
                 <ul>
-                    <li class="botao x-salada" id="id botao salada">
+                    <li class="botao ativo" id="id botao salada">
                         <img src="assets/img/lanches/x-salada.png" alt="x-salada">
                         <span>X-Salada</span>
                     </li>
 
-                    <li class="botao x-bacon" id="id botao bacon">
+                    <li class="botao" id="id botao bacon">
                         <img src="assets/img/lanches/x-bacon.png" alt="x-bacon">
                         <span>X-Bacon</span>
                     </li>
 
-                    <li class="botao x-frango" id="id botao frango">
+                    <li class="botao" id="id botao frango">
                         <img src="assets/img/lanches/x-frango.png" alt="x-frango">
                         <span>X-Frango</span>
                     </li>
 
-                    <li class="botao x-tudo" id="id botao tudo">
+                    <li class="botao" id="id botao tudo">
                         <img src="assets/img/lanches/x-tudo.png" alt="x-tudo">
                         <span>X-Tudo</span>
                     </li>
