--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/cardapio.css">
     <link rel="stylesheet" href="assets/css/opcoes.css">
     <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/carousel.css">
 
     <script src="js/index.js" defer></script>
 
@@ -20,7 +21,7 @@
                 <div class="carousel carousel-x-salada">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao-lancheda aberto cor-salada">
+                    <div class="cartao-lanche aberto cor-salada">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Salada</h2>
@@ -33,7 +34,7 @@
                         </div>
                     </div>
 
-                    <div class="cartao-lancheda com fritas cor-salada">
+                    <div class="cartao-lanche cor-salada">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Salada com Batata Frita</h2>
@@ -50,7 +51,7 @@
                 <div class="carousel carousel-x-bacon">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao-lanchen cor-bacon">
+                    <div class="cartao-lanche cor-bacon">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Bacon</h2>
@@ -63,7 +64,7 @@
                         </div>
                     </div>
 
-                    <div class="cartao-lanchen com fritas cor-bacon">
+                    <div class="cartao-lanche cor-bacon">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Bacon com Batata Frita</h2>
@@ -81,7 +82,7 @@
                 <div class="carousel carousel-x-frango">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao-lanchego cor-frango">
+                    <div class="cartao-lanche cor-frango">
                         <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Frango</h2>
@@ -94,8 +95,8 @@
                         </div>
                     </div>
 
-                    <div class="cartao-lanche com fritas">
-                        <div class="cartao-topo cor-frango">
+                    <div class="cartao-lanche cor-frango">
+                        <div class="cartao-topo">
                             <div class="detalhes">
                                 <h2 class="name">X-Frango com Batata Frita</h2>
                                 <span>#006</span>
@@ -140,7 +141,7 @@
                 </div>
             </div>
     
-            <nav class="opcoes">
+            <!-- <nav class="opcoes">
                 <ul>
                     <li class="botao ativo" id="id botao salada">
                         <img src="assets/img/lanches/x-salada.png" alt="x-salada">
@@ -162,7 +163,7 @@
                         <span>X-Tudo</span>
                     </li>
                 </ul>
-            </nav>
+            </nav> -->
         </div>
         
     </main>
