Putting display flex in carousel divs

--- a/index.html
+++ b/index.html
@@ -21,28 +21,30 @@
                 <div class="carousel carousel-x-salada">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao-lanche aberto cor-salada">
-                        <div class="cartao-topo">
-                            <div class="detalhes">
-                                <h2 class="name">X-Salada</h2>
-                                <span>#001</span>
-                            </div>
-                            <span class="tipo">lanches</span>
-                            <div class="cartao-imagem">
-                                <img src="assets/img/lanches/x-salada.png" alt="X-Salada">
+                    <div class="cartao-wrapper">
+                        <div class="cartao-lanche aberto cor-salada">
+                            <div class="cartao-topo">
+                                <div class="detalhes">
+                                    <h2 class="name">X-Salada</h2>
+                                    <span>#001</span>
+                                </div>
+                                <span class="tipo">lanches</span>
+                                <div class="cartao-imagem">
+                                    <img src="assets/img/lanches/x-salada.png" alt="X-Salada">
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="cartao-lanche cor-salada">
-                        <div class="cartao-topo">
-                            <div class="detalhes">
-                                <h2 class="name">X-Salada com Batata Frita</h2>
-                                <span>#002</span>
-                            </div>
-                            <span class="tipo">lanches</span>
-                            <div class="cartao-imagem">
-                                <img src="assets/img/lanches/x-salada com batata.png" alt="X-Salada com batata frita">
+                        <div class="cartao-lanche cor-salada">
+                            <div class="cartao-topo">
+                                <div class="detalhes">
+                                    <h2 class="name">X-Salada com Batata Frita</h2>
+                                    <span>#002</span>
+                                </div>
+                                <span class="tipo">lanches</span>
+                                <div class="cartao-imagem">
+                                    <img src="assets/img/lanches/x-salada com batata.png" alt="X-Salada com batata frita">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -51,28 +53,30 @@
                 <div class="carousel carousel-x-bacon">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao-lanche cor-bacon">
-                        <div class="cartao-topo">
-                            <div class="detalhes">
-                                <h2 class="name">X-Bacon</h2>
-                                <span>#003</span>
-                            </div>
-                            <span class="tipo">lanches</span>
-                            <div class="cartao-imagem">
-                                <img src="assets/img/lanches/x-bacon.png" alt="X-Bacon">
+                    <div class="cartao-wrapper">
+                        <div class="cartao-lanche cor-bacon">
+                            <div class="cartao-topo">
+                                <div class="detalhes">
+                                    <h2 class="name">X-Bacon</h2>
+                                    <span>#003</span>
+                                </div>
+                                <span class="tipo">lanches</span>
+                                <div class="cartao-imagem">
+                                    <img src="assets/img/lanches/x-bacon.png" alt="X-Bacon">
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="cartao-lanche cor-bacon">
-                        <div class="cartao-topo">
-                            <div class="detalhes">
-                                <h2 class="name">X-Bacon com Batata Frita</h2>
-                                <span>#004</span>
-                            </div>
-                            <span class="tipo">lanches</span>
-                            <div class="cartao-imagem">
-                                <img src="assets/img/lanches/x-bacon com batata.png" alt="X-Bacon com batata frita">
+                        <div class="cartao-lanche cor-bacon">
+                            <div class="cartao-topo">
+                                <div class="detalhes">
+                                    <h2 class="name">X-Bacon com Batata Frita</h2>
+                                    <span>#004</span>
+                                </div>
+                                <span class="tipo">lanches</span>
+                                <div class="cartao-imagem">
+                                    <img src="assets/img/lanches/x-bacon com batata.png" alt="X-Bacon com batata frita">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -82,28 +86,30 @@
                 <div class="carousel carousel-x-frango">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao-lanche cor-frango">
-                        <div class="cartao-topo">
-                            <div class="detalhes">
-                                <h2 class="name">X-Frango</h2>
-                                <span>#005</span>
-                            </div>
-                            <span class="tipo">lanches</span>
-                            <div class="cartao-imagem">
-                                <img src="assets/img/lanches/x-frango.png" alt="X-Frango">
+                    <div class="cartao-wrapper">
+                        <div class="cartao-lanche cor-frango">
+                            <div class="cartao-topo">
+                                <div class="detalhes">
+                                    <h2 class="name">X-Frango</h2>
+                                    <span>#005</span>
+                                </div>
+                                <span class="tipo">lanches</span>
+                                <div class="cartao-imagem">
+                                    <img src="assets/img/lanches/x-frango.png" alt="X-Frango">
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="cartao-lanche cor-frango">
-                        <div class="cartao-topo">
-                            <div class="detalhes">
-                                <h2 class="name">X-Frango com Batata Frita</h2>
-                                <span>#006</span>
-                            </div>
-                            <span class="tipo">lanches</span>
-                            <div class="cartao-imagem">
-                                <img src="assets/img/lanches/x-frango com batata.png" alt="X-Frango com batata frita">
+                        <div class="cartao-lanche cor-frango">
+                            <div class="cartao-topo">
+                                <div class="detalhes">
+                                    <h2 class="name">X-Frango com Batata Frita</h2>
+                                    <span>#006</span>
+                                </div>
+                                <span class="tipo">lanches</span>
+                                <div class="cartao-imagem">
+                                    <img src="assets/img/lanches/x-frango com batata.png" alt="X-Frango com batata frita">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -113,35 +119,37 @@
                 <div class="carousel carousel-x-tudo">
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
-                    <div class="cartao-lanche cor-tudo">
-                        <div class="cartao-topo">
-                            <div class="detalhes">
-                                <h2 class="name">X-Tudo</h2>
-                                <span>#007</span>
-                            </div>
-                            <span class="tipo">lanches</span>
-                            <div class="cartao-imagem">
-                                <img src="assets/img/lanches/x-tudo.png" alt="x-tudo">
+                    <div class="cartao-wrapper">
+                        <div class="cartao-lanche cor-tudo">
+                            <div class="cartao-topo">
+                                <div class="detalhes">
+                                    <h2 class="name">X-Tudo</h2>
+                                    <span>#007</span>
+                                </div>
+                                <span class="tipo">lanches</span>
+                                <div class="cartao-imagem">
+                                    <img src="assets/img/lanches/x-tudo.png" alt="x-tudo">
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="cartao-lanche com fritas cor-tudo">
-                        <div class="cartao-topo">
-                            <div class="detalhes">
-                                <h2 class="name">X-Tudo com Batata Frita</h2>
-                                <span>#008</span>
-                            </div>
-                            <span class="tipo">lanches</span>
-                            <div class="cartao-imagem">
-                                <img src="assets/img/lanches/x-tudo com batata.png" alt="x-tudo com batata frita">
+                        <div class="cartao-lanche com fritas cor-tudo">
+                            <div class="cartao-topo">
+                                <div class="detalhes">
+                                    <h2 class="name">X-Tudo com Batata Frita</h2>
+                                    <span>#008</span>
+                                </div>
+                                <span class="tipo">lanches</span>
+                                <div class="cartao-imagem">
+                                    <img src="assets/img/lanches/x-tudo com batata.png" alt="x-tudo com batata frita">
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
     
-            <!-- <nav class="opcoes">
+            <nav class="opcoes">
                 <ul>
                     <li class="botao ativo" id="id botao salada">
                         <img src="assets/img/lanches/x-salada.png" alt="x-salada">
@@ -163,7 +171,7 @@
                         <span>X-Tudo</span>
                     </li>
                 </ul>
-            </nav> -->
+            </nav>
         </div>
         
     </main>
