Fixed image size and first JavaScript codes for changing elements through buttons not yet finalized

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/carousel.css">
 
-    <script src="js/index.js" defer></script>
+    <script src="assets/js/index.js" defer></script>
 
     <title>Cardápio</title>
 </head>
@@ -22,7 +22,7 @@
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
                     <div class="cartao-wrapper">
-                        <div class="cartao-lanche aberto cor-salada">
+                        <div class="cartao-lanche aberto cor-salada" id="cartão-x-salada">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Salada</h2>
@@ -35,7 +35,7 @@
                             </div>
                         </div>
 
-                        <div class="cartao-lanche cor-salada">
+                        <div class="cartao-lanche cor-salada" id="cartão-x-salada">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Salada com Batata Frita</h2>
@@ -54,7 +54,7 @@
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
                     <div class="cartao-wrapper">
-                        <div class="cartao-lanche cor-bacon">
+                        <div class="cartao-lanche cor-bacon" id="cartão-x-bacon">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Bacon</h2>
@@ -67,7 +67,7 @@
                             </div>
                         </div>
 
-                        <div class="cartao-lanche cor-bacon">
+                        <div class="cartao-lanche cor-bacon" id="cartão-x-bacon">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Bacon com Batata Frita</h2>
@@ -87,7 +87,7 @@
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
                     <div class="cartao-wrapper">
-                        <div class="cartao-lanche cor-frango">
+                        <div class="cartao-lanche cor-frango" id="cartão-x-frango">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Frango</h2>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
 
-                        <div class="cartao-lanche cor-frango">
+                        <div class="cartao-lanche cor-frango" id="cartão-x-frango">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Frango com Batata Frita</h2>
@@ -120,7 +120,7 @@
                     <button class="arrow-left control" aria-label="Previous image">◀</button>
                     <button class="arrow-right control" aria-label="Next image">▶</button>
                     <div class="cartao-wrapper">
-                        <div class="cartao-lanche cor-tudo">
+                        <div class="cartao-lanche cor-tudo" id="cartão-x-tudo">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Tudo</h2>
@@ -133,7 +133,7 @@
                             </div>
                         </div>
 
-                        <div class="cartao-lanche com fritas cor-tudo">
+                        <div class="cartao-lanche com fritas cor-tudo" id="cartão-x-tudo">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Tudo com Batata Frita</h2>
@@ -151,22 +151,22 @@
     
             <nav class="opcoes">
                 <ul>
-                    <li class="botao ativo" id="id botao salada">
+                    <li class="botao ativo" id="x-salada">
                         <img src="assets/img/lanches/x-salada.png" alt="x-salada">
                         <span>X-Salada</span>
                     </li>
 
-                    <li class="botao" id="id botao bacon">
+                    <li class="botao" id="x-bacon">
                         <img src="assets/img/lanches/x-bacon.png" alt="x-bacon">
                         <span>X-Bacon</span>
                     </li>
 
-                    <li class="botao" id="id botao frango">
+                    <li class="botao" id="x-frango">
                         <img src="assets/img/lanches/x-frango.png" alt="x-frango">
                         <span>X-Frango</span>
                     </li>
 
-                    <li class="botao" id="id botao tudo">
+                    <li class="botao" id="x-tudo">
                         <img src="assets/img/lanches/x-tudo.png" alt="x-tudo">
                         <span>X-Tudo</span>
                     </li>
