I fixed the card size and started fixing the arrow properties

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <main>
         <div class="global">
             <div class="cardapio-opcoes">
-                <div class="carousel carousel-x-salada">
-                    <button class="arrow-left control" aria-label="Previous image">◀</button>
-                    <button class="arrow-right control" aria-label="Next image">▶</button>
+                <div class="carousel aberto" id="carousel-x-salada">
+                    <button class="arrow-left control" aria-label="Previous image">➤</button>
+                    <button class="arrow-right control" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
-                        <div class="cartao-lanche aberto cor-salada" id="cartão-x-salada">
+                        <div class="cartao-lanche cor-salada" id="cartão-x-salada">
                             <div class="cartao-topo">
                                 <div class="detalhes">
                                     <h2 class="name">X-Salada</h2>
@@ -50,9 +50,9 @@
                     </div>
                 </div>
 
-                <div class="carousel carousel-x-bacon">
-                    <button class="arrow-left control" aria-label="Previous image">◀</button>
-                    <button class="arrow-right control" aria-label="Next image">▶</button>
+                <div class="carousel" id="carousel-x-bacon">
+                    <button class="arrow-left control" aria-label="Previous image">➤</button>
+                    <button class="arrow-right control" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
                         <div class="cartao-lanche cor-bacon" id="cartão-x-bacon">
                             <div class="cartao-topo">
@@ -83,9 +83,9 @@
                 </div>
                 
 
-                <div class="carousel carousel-x-frango">
-                    <button class="arrow-left control" aria-label="Previous image">◀</button>
-                    <button class="arrow-right control" aria-label="Next image">▶</button>
+                <div class="carousel" id="carousel-x-frango">
+                    <button class="arrow-left control" aria-label="Previous image">➤</button>
+                    <button class="arrow-right control" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
                         <div class="cartao-lanche cor-frango" id="cartão-x-frango">
                             <div class="cartao-topo">
@@ -116,9 +116,9 @@
                 </div>
 
 
-                <div class="carousel carousel-x-tudo">
-                    <button class="arrow-left control" aria-label="Previous image">◀</button>
-                    <button class="arrow-right control" aria-label="Next image">▶</button>
+                <div class="carousel" id="carousel-x-tudo">
+                    <button class="arrow-left control" aria-label="Previous image">➤</button>
+                    <button class="arrow-right control" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
                         <div class="cartao-lanche cor-tudo" id="cartão-x-tudo">
                             <div class="cartao-topo">
