--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                     </div>
 
                                     <div class="quantidade-valor">
-                                        <h3>Preço</h3>
+                                        <h3>Preço (cada)</h3>
                                         <li class="combobox-texto">
                                             <input id="number-value" type="number" value=""> 
                                             <p>R$ <span>3</span>,00</p>
@@ -117,7 +117,7 @@
                                     </div>
 
                                     <div class="quantidade-valor">
-                                        <h3>Preço</h3>
+                                        <h3>Preço (cada)</h3>
                                         <li class="combobox-texto">
                                             <input id="number-value" type="number" value=""> 
                                             <p>R$ <span>3</span>,00</p>
@@ -189,7 +189,7 @@
                                     </div>
 
                                     <div class="quantidade-valor">
-                                        <h3>Preço</h3>
+                                        <h3>Preço (cada)</h3>
                                         <li class="combobox-texto">
                                             <input id="number-value" type="number" value=""> 
                                             <p>R$ <span>3</span>,00</p>
@@ -255,7 +255,7 @@
                                     </div>
 
                                     <div class="quantidade-valor">
-                                        <h3>Preço</h3>
+                                        <h3>Preço (cada)</h3>
                                         <li class="combobox-texto">
                                             <input id="number-value" type="number" value=""> 
                                             <p>R$ <span>3</span>,00</p>
