Fixed arrows on inputs and fixed image sizes

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div class="global">
             <div class="cardapio-opcoes">
                 <div class="carousel aberto" id="carousel-x-salada">
-                    <button class="arrow-left control" aria-label="Previous image">➤</button>
-                    <button class="arrow-right control" aria-label="Next image">➤</button>
+                    <button class="arrow-left control arrow-cor-salada" aria-label="Previous image">➤</button>
+                    <button class="arrow-right control arrow-cor-salada" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
                         <div class="cartao-lanche cor-salada" id="cartão-x-salada">
                             <div class="cartao-topo">
@@ -198,8 +198,8 @@
                 </div>
 
                 <div class="carousel" id="carousel-x-bacon">
-                    <button class="arrow-left control" aria-label="Previous image">➤</button>
-                    <button class="arrow-right control" aria-label="Next image">➤</button>
+                    <button class="arrow-left control arrow-cor-bacon" aria-label="Previous image">➤</button>
+                    <button class="arrow-right control arrow-cor-bacon" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
                         <div class="cartao-lanche cor-bacon" id="cartão-x-bacon">
                             <div class="cartao-topo">
@@ -379,8 +379,8 @@
                 
 
                 <div class="carousel" id="carousel-x-frango">
-                    <button class="arrow-left control" aria-label="Previous image">➤</button>
-                    <button class="arrow-right control" aria-label="Next image">➤</button>
+                    <button class="arrow-left control arrow-cor-frango" aria-label="Previous image">➤</button>
+                    <button class="arrow-right control arrow-cor-frango" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
                         <div class="cartao-lanche cor-frango" id="cartão-x-frango">
                             <div class="cartao-topo">
@@ -560,8 +560,8 @@
 
 
                 <div class="carousel" id="carousel-x-tudo">
-                    <button class="arrow-left control" aria-label="Previous image">➤</button>
-                    <button class="arrow-right control" aria-label="Next image">➤</button>
+                    <button class="arrow-left control arrow-cor-tudo" aria-label="Previous image">➤</button>
+                    <button class="arrow-right control arrow-cor-tudo" aria-label="Next image">➤</button>
                     <div class="cartao-wrapper">
                         <div class="cartao-lanche cor-tudo" id="cartão-x-tudo">
                             <div class="cartao-topo">
